// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBanner should match snapshot for default action banner 1`] = `
<div>
  <section
    class="action-banner"
    data-component="action-banner"
  >
    <div
      class="action-banner__container"
    >
      <div
        class="action-banner__inner"
      >
        <div
          class="action-banner__text"
        >
          <h2
            class="action-banner__title"
          >
            Some title
          </h2>
          <div
            class="action-banner__intro"
          >
            Some body
          </div>
        </div>
        <div
          class="action-banner__actions"
        >
          <a
            class="btn"
            data-component="button--primary"
            href="/test"
          >
            Some CTA
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ActionBanner should match snapshot for subtle action banner 1`] = `
<div>
  <section
    class="action-banner action-banner--subtle"
    data-component="action-banner--subtle"
  >
    <div
      class="action-banner__container"
    >
      <div
        class="action-banner__inner"
      >
        <div
          class="action-banner__text"
        >
          <h2
            class="action-banner__title"
          >
            Some title
          </h2>
          <div
            class="action-banner__intro"
          >
            Some body
          </div>
        </div>
        <div
          class="action-banner__actions"
        >
          <a
            class="btn"
            data-component="button--primary"
            href="/test"
          >
            Some CTA
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ActionBanner should render all props 1`] = `
<div>
  <section
    class="action-banner action-banner--full-width test-class"
    data-component="action-banner--fullWidth"
  >
    <div
      class="action-banner--full-width__image-container"
      style="background-image: url(test-image.jpg);"
    />
    <div
      class="action-banner__container"
    >
      <div
        class="action-banner__inner"
      >
        <div
          class="action-banner__text"
        >
          <h2
            class="action-banner__title"
          >
            Test Title
          </h2>
          <div
            class="action-banner__intro"
          >
            <p>
              Test Children
            </p>
          </div>
        </div>
        <div
          class="action-banner__actions"
        >
          <a
            class="btn"
            data-component="button--primary"
            href="/test"
          >
            Some CTA
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
